# popfit

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml  test.py
popfit/: __init__.py
popfit/core/: __init__.py  expression.py  init.py  model.py  spec.py  variable.py
popfit/nn/: linear.py
popfit/optim/: __init__.py  base.py  block_cmaes.py  differential_evolution.py  multistart.py  pso.py
popfit/parametrization/: __init__.py  base.py  integer.py  sigmoid_bounded.py
tests/: test_expressions.py  test_init.py  test_model.py  test_parametrization.py  test_spec.py  test_variable.py
