[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "popfit"
description = "Multistart optimization library for pytorch"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dominik Penk", email = "penk.dominik@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["popfit"]

[tool.setuptools.dynamic]
version = {attr = "popfit._version.__version__"}

[tool.ruff]
line-length = 88
target-version = "py311"
